fixed footer overlap error from last commit

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -26,6 +26,7 @@
 .main-content {
   margin-top: 30px;
   text-align: left;
+  margin-bottom: 15vh;
 }
 
 .main-content p {
